fix covers.css

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -8,7 +8,7 @@
     height: 508px;
     position: relative;
     overflow: hidden;
-    background: url('./img/covers/elements_vectors-min.png') repeat center center;
+    background: url('../img/covers/elements_vectors-min.png') repeat center center;
     background-size: contain;
 }
 
